--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ nav:
     href:           "/TIL"
   - name:           "post"
     href:           "/post"
+  - name:           "az"
+    href:           "/az"
 
 
 sass:
@@ -55,6 +57,13 @@ defaults:
       type:         "TIL"
     values:
       layout:       "TIL"
+    
+  -
+    scope:
+      path:         ""
+      type:         "az"
+    values:
+      layout:       "az"
 
 
 gems:
