--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-name:               "GiBong"
-description:        "My First Blog"
+name:               "Gi Bong"
+description:        "My Blog"
 
 url:                ""
 author:             "gy"
 email:              "gyim1345@gmail.com"
 #gravatar_hash:      ""
 #twitter:            ""
-#email:              "gyim1345@gmail.com"
-#github:             ""
+email:              "gyim1345@gmail.com"
+github:             "gyim1345.github.io"
 #pinterest:          ""
 #linkedin:           ""
 #facebook:           ""
