--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name:               "Gi Bong"
-description:        "My Blog"
+description:        ""
 
 url:                ""
 author:             "gy"
