--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email:              "gyim1345@gmail.com"
 #gravatar_hash:      ""
 #twitter:            ""
 email:              "gyim1345@gmail.com"
-github:             "gyim1345.github.io"
+github:             "https://gyim1345.github.io"
 #pinterest:          ""
 #linkedin:           ""
 #facebook:           ""
