--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name:               "Gi Bong"
 description:        ""
 
-url:                ""
+url:                "https://gyim1345.github.io"
 author:             "gy"
 email:              "gyim1345@gmail.com"
 #gravatar_hash:      ""
