--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name:               "Gi Bong"
-description:        ""
+description:        "임기봉"
 
 url:                "https://gyim1345.github.io"
 author:             "gy"
